<resources>
    <string name="app_name">Ecommerce</string>
    <string name="ADD_TO_LIST">ADD TO LIST</string>
    <string name="ProductName">Fortune Sunlite Refined SunFlower Oil : 1 Liter</string>
    <string name="mrp_price">MRP \u20B9 137.00</string>
    <string name="dmart_price">Dmart \u20B9 105.00</string>
    <string name="save">Save \u20B9 32.00</string>
    <string name="add_to_cart">Add to cart</string>
</resources>
